force-app/main/default/objects/Async_Request__c/Async_Request__c.object-meta.xml
<CustomObject>
    <label>Async Request</label>
    <nameField>
        <displayFormat>AR-{0000}</displayFormat>
        <label>Async Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Async Requests</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>