force-app/main/default/objects/Async_Request__c/fields/Attempts__c.field-meta.xml
<CustomField>
    <fullName>Attempts__c</fullName>
    <label>Attempts</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>