force-app/main/default/objects/Async_Request__c/fields/Last_Runtime__c.field-meta.xml
<CustomField>
    <fullName>Last_Runtime__c</fullName>
    <label>Last Runtime</label>
    <type>DateTime</type>
</CustomField>