force-app/main/default/objects/Async_Request__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>createCandidate</fullName>
            </value>
            <value>
                <fullName>updateCandidate</fullName>
            </value>
            <value>
                <fullName>testType</fullName>
            </value>
            <value>
                <fullName>createPlacement</fullName>
            </value>
            <value>
                <fullName>updatePlacement</fullName>
            </value>
            <value>
                <fullName>insertCandidate</fullName>
                <isActive>false</isActive>
                <label>insertCandidate</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>